src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXARBCreateContext_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXARBCreateContext_StringErrorContext.class */
public final class GLXARBCreateContext_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXCreateContextAttribsARB(JJJIJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBCreateContextErrorContext");
        methods.put("glXCreateContextAttribsARB(JJJZLjava/nio/IntBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBCreateContextErrorContext");
        methods.put("glXCreateContextAttribsARB(JJJZ[I)J", "net/labymod/core/laby3d/opengl/error/generated/GLXARBCreateContextErrorContext");
        return methods;
    }
}
